# warlordsoft

./: README.md  setup.cfg
src/warlordsoft/: main.py
src/warlordsoft.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
